# Cpp-Repo-Template

./: CMakeCache.txt  CMakeLists.txt  Doxyfile  Makefile  README.md  build.sh  cmake_install.cmake  executable  main.cpp  requirements.txt
.cache/clangd/index/: OtherTest.cpp.847BB357E0C10DC5.idx  Sample.cpp.BD544A3F88091C75.idx  Sample.h.90DDBFE814088B1B.idx  SampleTest.cpp.CCA702ED0DFEC3EF.idx  catch.hpp.9235836DE382C1DE.idx  main.cpp.DEFC7EE5C1056C36.idx  mainTest.cpp.DE76C5AABE3C4F4D.idx
.ccache/1/: stats
.ccache/1/0/: c6ada19a30b4552239e0c1d502c0e6-1293.manifest  (+1 more)
.ccache/5/: stats
.ccache/a/: stats
.ccache/b/: stats
.ccache/e/: stats
.ccache/f/: stats
.github/workflows/: cmake.yml  doxygen_deployment.yml
docs/: Doxyfile  annotated.html  class_sample.html  dir_d44c64559bbebec7f509842c48db8b23.html  functions_vars.html  index.html
docs/html/: _sample_8h_source.html  annotated.html  class_sample-members.html  class_sample.html  classes.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  functions_vars.html  index.html
docs/latex/: _sample_8h_source.tex  annotated.tex  class_sample.tex  files.tex  refman.tex
docs/search/: functions_2.js  variables_0.js
html/: _sample_8h_source.html  annotated.html  class_sample-members.html  class_sample.html  classes.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  functions_vars.html
html/search/: all_4.js  searchdata.js
include/: Sample.h
latex/: refman.tex
src/: Sample.cpp
test/Other/: OtherTest.cpp
test/Sample/: SampleTest.cpp
(+22 files in other folders)
